# halx

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: doxygen.yml
include/halx/: core.hpp  peripheral.hpp  rtos.hpp
include/halx/core/: common.hpp  function.hpp  notifier.hpp  ring_buffer.hpp  timeout.hpp
include/halx/peripheral/: can.hpp  exti.hpp  gpio.hpp  pwm.hpp  tim.hpp  uart.hpp
include/halx/peripheral/can/: bxcan.hpp  common.hpp  fdcan.hpp
include/halx/peripheral/uart/: common.hpp  uart_dma.hpp  uart_it.hpp  uart_poll.hpp
include/halx/rtos/: mailbox.hpp  mutex.hpp  queue.hpp  semaphore.hpp  thread.hpp  timer.hpp
src/: exti.cpp  gpio.cpp  stdout.cpp
